# Aji-OS

./: .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  DESKTOP.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  README_COMPLETE.md  SETUP.md
backend/: .env.example  ai.py  commands.py  config.py  database.py  main.py  memory.py  providers.py  requirements.txt  voice.py
backend/plugins/: __init__.py  browser.py  calculator.py  chrome.py  media.py  screenshot.py  spotify.py  system.py  vscode.py  weather.py
frontend/: index.html  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: ChatInterface.jsx  MessageBubble.jsx  SettingsPanel.jsx  Sidebar.jsx  SystemStats.jsx  TypingIndicator.jsx
frontend/src/services/: api.js
frontend/src/store/: appStore.js
frontend/src/styles/: index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
