[package]
name = "aji-os"
version = "1.0.0"
description = "AI Desktop Assistant - Aji OS"
authors = ["Kanhax Dev"]
edition = "2021"
rust-version = "1.57"

[lib]
name = "aji_os_lib"
path = "src/lib.rs"

[[bin]]
name = "aji-os"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = [ "shell-open"] }
once_cell = "1.19"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
